[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "filesystem",
    "os",
    "parsing",
]
description = "Read information from EXT4 filesystem images"
license = "MIT"
name = "ext4"
readme = "README.md"
repository = "https://github.com/FauxFaux/ext4-rs"
version = "0.10.0"

edition = "2021"

[dependencies]
anyhow = {version = "1", default-features = false }
bitflags = "1"
crc = "1"
positioned-io2 = "0.3"
thiserror-no-std = "2.0.2"
acid_io = { version = "0.1.0", default-features = false, features = ["byteorder"] }

[dev-dependencies]
bootsector = "0.2"
tempfile = "3"

[features]
default = ["std"]
std = ["acid_io/std", "thiserror-no-std/std", "anyhow/std"]

[patch.crates-io]
positioned-io2 = { git = "https://github.com/oberien/positioned-io2", branch = "no_std" }
